Add comprehensive SEO improvements: meta tags, Open Graph, Twitter Cards, structured data, sitemap, and robots.txt

--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rudy Ravelin - Resume</title>
+    <title>Rudy Ravelin - Resume | Web Developer Portfolio</title>
+    <meta name="description" content="Resume of Rudy Ravelin - Web Developer with experience in React, Node.js, Express, MongoDB, WordPress, and SEO. Based in Washington State." />
+    <meta name="keywords" content="Rudy Ravelin Resume, Web Developer Resume, Software Engineer Resume, React Developer Resume" />
+    <link rel="canonical" href="https://rudyravelindev.vercel.app/resume.html" />
     <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <link rel="apple-touch-icon" href="./favicon.svg" />
     <link rel="stylesheet" href="./css/styles.css" />
