remove wordpress skilss

--- a/resume.html
+++ b/resume.html
@@ -104,7 +104,7 @@
         <section class="resume-section">
           <h2 class="resume-section-title">Profile</h2>
           <p class="resume-text">
-            Motivated Web Developer with hands-on experience in front-end development, SEO optimization, and website performance enhancement. I enjoy building responsive and user-friendly WordPress websites utilizing modern frameworks like React. Driven by problem-solving, clean code, and continuous improvement. Known for adapting quickly to new technologies, collaborating effectively across teams, and delivering projects that improve user experience and performance.
+            Motivated Web Developer with hands-on experience in front-end development, SEO optimization, and website performance enhancement. I enjoy building responsive and user-friendly websites utilizing modern frameworks like React. Driven by problem-solving, clean code, and continuous improvement. Known for adapting quickly to new technologies, collaborating effectively across teams, and delivering projects that improve user experience and performance.
           </p>
         </section>
 
